<resources>
    <string name="app_name">ScanAndGo</string>
    <string name="tv_splash_text">Una app de Jumbo</string>
    <string name="tv_title_login">Login</string>
    <string name="tv_sub_title_login">Ingresa con tu cuenta de Jumbo.cl</string>
    <string name="btn_enter">Iniciar sesión</string>
    <string name="tv_forgot_password"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="tv_login_register">¿No estás registrado? Crea un cuenta</string>
    <string name="tv_term_and_conditions">Al ingresar y/o registrarte aceptas los\n<u>términos y condiciones</u></string>
    <string name="tv_logout">Cerrar sesión</string>
    <string name="tv_title_register">Regístrate</string>
    <string name="hint_rut">RUT</string>
    <string name="hint_name">NOMBRE</string>
    <string name="hint_last_name">APELLIDO</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_phone">NUMERO TELEFONICO</string>
    <string name="hint_password">CONTRASEÑA</string>
    <string name="hint_retry_password">REPETIR CONTRASEÑA</string>
    <string name="btn_enter_register">Siguiente</string>
    <string name="validation_empty_fields">Debe completar los campos</string>
    <string name="validation_rut">Rut inválido</string>
    <string name="validation_first_name">Debe llenar el campo nombre</string>
    <string name="validation_last_name">Debe llenar el campo apellido</string>
    <string name="validation_email">Correo electrónico inválido</string>
    <string name="validation_short_password">Contraseña demasiado corta</string>
    <string name="validation_match_password">Las contraseñas no coinciden</string>
    <string name="validation_password_format">La contraseña debe tener al menos 8 caracteres alfanuméricos, 1 mayúscula y 1 minúscula</string>
    <string name="validation_init_session">No se pudo iniciar sesión, por favor verifique que los datos sean los correctos</string>
    <string name="validation_check_password_count">Mínimo 8 caracteres</string>
    <string name="validation_check_password_alpha_numeric">Alfanumérico</string>
    <string name="validation_check_password_uppercase">1 Mayúscula</string>
    <string name="validation_check_password_lowercase">1 Minuscula</string>
    <string name="validation_check_password_title">Crea una contraseña que cumpla con los siguentes requisitos:</string>
    <string name="validation_low_storage">poco espacio en memoria</string>
    <string name="validation_camera_error_dependencies">Error de dependencias</string>
    <string name="validation_camera_error_open">No se pudo abrir la camara</string>
    <string name="tv_title_on_boarding">Tutorial</string>
    <string name="tv_hint_1">Escanea productos colocando los códigos de barra por el visor.</string>
    <string name="tv_hint_2">Modifica la cantidad de tus productos o elimínalos fácilmente.</string>
    <string name="tv_hint_3">¡Recuerda llevar tus bolsas reutilizables!\nAsí escaneas y embolsas inmediatamente.</string>
    <string name="tv_hint_4">¿Terminaste de escanear? Realiza el pago y presenta el código QR en la salida.</string>
    <string name="skip">Omitir</string>
    <string name="i_get_it">Entiendo</string>
    <string name="tv_title_scanner">Scanner</string>
    <string name="btn_go_to_pay">Ir a pagar</string>
    <string name="tv_total">Subtotal</string>
    <string name="btn_add_product_manually">Agregar el código manualmente</string>
    <string name="tv_title_lis">Mi Lista</string>
    <string name="tv_hint_lis">Coloca acá los productos que vas a comprar para que no se te olvide ninguno</string>
    <string name="tv_title_profile">Mi Perfil</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="tv_address">Dirección</string>
    <string name="menu_scanner">Scanner</string>
    <string name="menu_shopping_list">Lista de compra</string>
    <string name="menu_my_cards">Medio de pago</string>
    <string name="menu_shopping_history">Historial de compras</string>
    <string name="menu_stores">Locales</string>
    <string name="menu_terms_and_conditions">Términos y condiciones</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_email">Contáctanos</string>
    <string name="menu_call">LLámanos</string>
    <string name="menu_log_out">Cerrar sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tv_title_cards">Medios de pago</string>
    <string name="delete_card">Eliminar tarjeta</string>
    <string name="there_has_been_a_problem">Ha ocurrido un problema</string>
    <string name="set_as_defautlt">Predeterminada</string>
    <string name="pick_your_card">Selecciona tu tarjeta</string>
    <string name="empty_state_description">Aún no tienes  tarjetas ingresadas</string>
    <string name="delete_card_confirmation">¿Estás seguro de querer eliminar esta tarjeta?</string>
    <string name="delete">Eliminar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="add_your_card">Agrega tu tarjeta</string>
    <string name="text_payment_methods">Puedes fijar una como predeterminada, eliminar las que no uses y/o agregar nuevas tarjetas.</string>
    <string name="text_valid_thru">VALID THRU</string>
    <string name="text_button_pay">Ir a pagar</string>
    <string name="tv_text_total">Subtotal</string>
    <string name="tv_text_articles">Tienes 12 de</string>
    <string name="tv_text_articles2">30 unid.</string>
    <string name="tv_text_toolbar">Mi Carrito</string>
    <string name="delete_text_product">Elimina Productos</string>
    <string name="delete_product_confirmation">¿Está seguro de que desea eliminar los productos?</string>
    <string name="delete_product">Eliminar</string>
    <string name="cancel_product">Cancelar</string>
    <string name="title_activity_item_checkout">item_checkout</string>
    <string name="tv_text_subtotal">Subtotal</string>
    <string name="tv_text_discount">Descuento Total</string>
    <string name="tv_text_total_checkout">Total</string>
    <string name="text_button_checkout">Pagar</string>
    <string name="checkout_title">Pagar</string>
    <string name="tv_text_add_payment_method"><u>Agregar medio de pago</u></string>
    <string name="tv_text_add_card_credit">Recuerda que solo puedes pagar\ncon tarjeta de crédito.</string>
    <string name="text_error">Error</string>
    <string name="text_error_promotion">Ha ocurrido un problema al calcular promociones.</string>
    <string name="text_retry_promotion">Reintentar</string>
    <string name="text_cancel_promotion">Cancelar</string>
    <string name="text_first_checkout">¡Primera Compra!</string>
    <string name="text_cvv_checkout">Al ser tu primera compra, por seguridad debes ingresar el CVV de tu tarjeta.</string>
    <string name="text_rut">Para acumular puntos, acceder a promociones y descuentos, por favor ingresa tu RUT</string>
    <string name="text_pay_accomplished">Tu pago fue realizado con éxito.</string>
    <string name="text_generate_qr">Ahora solo debes generar tu código QR y dirigirte al punto de pago Scan&amp;Go para salir.</string>
    <string name="text_btn_generate_qr">Generar QR</string>
    <string name="text_thanks_purchase">¡Gracias por su compra!</string>
    <string name="text_scan_qr">Para poder salir escanea este código QR en el punto Scan&amp;Go</string>
    <string name="text_deactivate_alarm">Recuerda quitar/desactivar las alarmas de los productos, puedes ser fiscalizado al salir del local.</string>
    <string name="text_total_qr">Total</string>
    <string name="text_product_qr">Productos</string>
    <string name="text_locale_qr">Jumbo Kennedy</string>
    <string name="text_rut_qr">Rut</string>
    <string name="text_product_not_found">Producto no encontrado</string>
    <string name="text_product_error">Parece que el código de barras que escaneaste es válido pero no está en stock de jumbo.</string>
    <string name="text_btn_go_scan">Seguir escaneando</string>
    <string name="text_store_available_error">Te encuentras fuera de alcance de una tienda Jumbo con Scan&amp;Go habilitada</string>
    <string name="text_store__not_available">Tienda no habilitada</string>
    <string name="text_experience_motivates">Tu experiencia nos motiva</string>
    <string name="text_evaluate_purchase">Evalua tu compra de hoy con nosotros.</string>
    <string name="text_add_commentary">Agrega un comentario (opcional)</string>
    <string name="text_experience_in_a_row">Tuviste que hacer fila en el punto de salida de Scan &amp; Go?</string>
    <string name="tv_title_terms_and_conditions">Términos y condiciones</string>
    <string name="tv_title_terms_and_conditions_dialog">Para continuar debes aceptar los términos y condiciones</string>
    <string name="btn_terms_and_conditions">Entiendo</string>
    <string name="terms_and_conditions_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hint_recover_password">CONTRASEÑA</string>
    <string name="hint_confirm_password">REPETIR CONTRASEÑA</string>
    <string name="hint_reestablish">Siguiente</string>
    <string name="hint_add_email">CORREO</string>
    <string name="btn_text_send">Enviar</string>
    <string name="text_send_password">Ingresa tu correo y te enviaremos un mail para recuperar tu clave.</string>
    <string name="text_sent_access_password">Para recuperar tu contraseña, por favor ingresa la clave a continuación:</string>
    <string name="text_add_password">Enviar</string>
    <string name="text_sending_password">Hemos enviado una clave de acceso a:</string>
    <string name="btn_text_continue">Finalizar</string>
    <string name="text_nearest_store">Es el Jumbo Scan&amp;Go más cercano.</string>
    <string name="text_payment_method_history">Medio de pago</string>
    <string name="text_subtotal_history">Subtotal</string>
    <string name="text_access_with_touch">Puedes acceder con Touch ID</string>
    <string name="text_set_up">¿Quieres configurarla?</string>
    <string name="text_accept_button">Aceptar</string>
    <string name="text_not_thanks">No, gracias</string>
    <string name="text_not_show">No volver a mostrar</string>
    <string name="text_accept_term_fingerprint">Al hacer uso de esta funcionalidad, el usuario declara aceptar que toda huella registrada en el dispositivo tendrá acceso a la información entregada por la aplicación.</string>
    <string name="text_enabled_access">Ya has habilitado el acceso con huella digital en tu nueva App Scan&amp;Go.</string>
    <string name="text_fingerprint_configuration">Recuerda que todas las huellas que tengas configuradas en tu dispositivo podrán ser utilizadas para acceder.</string>
    <string name="text_congratulations">¡Felicitaciones!</string>
</resources>