<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_fingerprint_reader"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingTop="40dp">

        <ImageView
            android:id="@+id/iv_fingerprint"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/icon_fingerprint_header" />

        <TextView
            android:id="@+id/tv_touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/circular_std_book"
            android:text="@string/text_access_with_touch"
            android:textColor="#4a4a4a"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/circular_std_book"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/text_set_up"
            android:textColor="@color/colorDivider"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_accept_touch"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_button_checkout"
            android:fontFamily="@font/circular_std_book"
            android:text="@string/text_accept_button"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_not_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/circular_std_book"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/text_not_thanks"
            android:textColor="#4a4a4a"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ly_not_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/ch_not_dialog"
                android:layout_gravity="right|center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_check_shopping_list"
                android:checked="false"
                android:clickable="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_std_book"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/text_not_show"
                android:textColor="#4a4a4a"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/circular_std_book"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/text_accept_term_fingerprint"
            android:textColor="@color/colorDivider"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>