<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/shape_first_checkout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_first_checkout"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingTop="40dp">

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/icon_check_dialog" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/circular_std_book"
            android:text="@string/text_congratulations"
            android:gravity="center"
            android:textColor="@color/color_text_checkout"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/circular_std_book"
            android:gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/text_enabled_access"
            android:textColor="@color/colorDivider"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/circular_std_book"
            android:gravity="center"
            android:text="@string/text_fingerprint_configuration"
            android:textColor="#80000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_accept_fingerprint"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_button_checkout"
            android:fontFamily="@font/circular_std_book"
            android:text="@string/text_accept_button"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>
</RelativeLayout>