<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/rl_main_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="17dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_std_book"
            android:lineSpacingExtra="6sp"
            android:text="@string/validation_check_password_title"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/ll_group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_check_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_green_24dp"
                android:tint="@color/white" />

            <TextView
                style="@style/style_register_checks"
                android:text="@string/validation_check_password_count" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_group_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@id/ll_group_1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_check_alpha_numeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_green_24dp"
                android:tint="@color/white" />

            <TextView
                style="@style/style_register_checks"
                android:text="@string/validation_check_password_alpha_numeric" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_group_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_group_1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_check_uppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_green_24dp"
                android:tint="@color/white" />

            <TextView
                style="@style/style_register_checks"
                android:text="@string/validation_check_password_uppercase" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_group_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_group_2"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ll_group_1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_check_lowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_green_24dp"
                android:tint="@color/white" />

            <TextView
                style="@style/style_register_checks"
                android:text="@string/validation_check_password_lowercase" />

        </LinearLayout>

    </RelativeLayout>

</layout>