<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/shape_first_checkout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_first_checkout"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingTop="40dp">

        <ImageView
            android:id="@+id/iv_cvv"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_scan_error" />

        <TextView
            android:id="@+id/tv_first_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/circular_std_book"
            android:text="@string/text_product_not_found"
            android:gravity="center"
            android:textColor="@color/color_text_checkout"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cvv"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/circular_std_book"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:text="@string/text_product_error"
            android:textColor="@color/colorDivider"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_go_scan"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button_checkout"
            android:fontFamily="@font/circular_std_book"
            android:text="@string/text_btn_go_scan"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>
</RelativeLayout>