<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_item_car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_item_car"
        android:orientation="vertical"
        android:weightSum="100">

        <include
            android:id="@+id/toolbar_incl"
            layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="15dp">

            <TextView
                android:fontFamily="@font/circular_std_book"
                android:id="@+id/tv_articles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_articles"
                android:textSize="14sp" />

            <TextView
                android:fontFamily="@font/circular_std_book"
                android:id="@+id/tv_articles2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_articles2"
                android:textColor="@color/orange_pressed"
                android:textSize="14sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="82"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="17dp"
            android:paddingRight="17dp">

            <TextView
                android:fontFamily="@font/circular_std_book"
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_text_total"
                android:textColor="#5d5d5d"
                android:textSize="16sp" />

            <TextView
                android:fontFamily="@font/circular_std_bold"
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_total"
                android:text="$ 140.000"
                android:textColor="#5d5d5d"
                android:textSize="19sp" />


            <Button
                android:fontFamily="@font/circular_std_book"
                android:id="@+id/btn_pay_car"
                android:layout_width="@dimen/btn_pay_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_active_terms"
                android:drawableRight="@drawable/icon_following_item_car"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/text_button_pay"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                style="?android:attr/borderlessButtonStyle"/>
        </RelativeLayout>
    </LinearLayout>

</layout>
